syntax = "proto3";

package event;

message AddNamespaceEvent {
    string namespace  = 1;
}

message DeleteNamespaceEvent {
    string namespace  = 1;
}

message AdminResponseEvent {
    bool Ok = 1;
    string Msg = 2;
}

message TestEvent {
    uint64 id = 1;
    string msg = 2;
}