
syntax="proto3";

package recovery;

message CheckPointMessage{
    // From the message source
    uint64  currentNumber       = 1;
    uint64 requiredNumber = 2;
    uint64 peerId = 3;

}




